--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>WeBuild - Bootstrap Coming Soon Template</title>
+  <title>Details Coming Soon</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -39,7 +39,7 @@
     <div class="container-fluid d-flex justify-content-between align-items-center">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html"><span>WeBuild</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>Details</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -54,9 +54,9 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <h1>WeBuild</h1>
+      <h1>Details</h1>
       <h2>We're working hard to improve our website and we'll ready to launch after</h2>
-      <div class="countdown" data-count="2023/12/3" data-template="%d days %h:%m:%s"></div>
+      <div class="countdown" data-count="2023/06/1" data-template="%d days %h:%m:%s"></div>
 
       <form action="forms/notify.php" method="post" role="form" class="php-email-form">
         <div class="row no-gutters">
@@ -94,7 +94,7 @@
             <div class="contact-address">
               <i class="bi bi-geo-alt"></i>
               <h3>Address</h3>
-              <address>A108 Adam Street, NY 535022, USA</address>
+              <address>Rrustem Statovci</address>
             </div>
           </div>
 
@@ -102,7 +102,7 @@
             <div class="contact-phone">
               <i class="bi bi-phone"></i>
               <h3>Phone Number</h3>
-              <p><a href="tel:+155895548855">+1 5589 55488 55</a></p>
+              <p><a href="tel:+38344865455">+384 44 765 455</a></p>
             </div>
           </div>
 
@@ -110,7 +110,7 @@
             <div class="contact-email">
               <i class="bi bi-envelope"></i>
               <h3>Email</h3>
-              <p><a href="mailto:info@example.com">info@example.com</a></p>
+              <p><a href="mailto:detailswax@gmail.com">detailswax@gmail.com</a></p>
             </div>
           </div>
 
